--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "ethers": "^5.7.2",
-    "framer-motion": "^12.10.1",
+    "framer-motion": "^12.23.0",
     "https-browserify": "^1.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.23.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
     "os-browserify": "^0.3.0",
