--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.0",
+    "@chainlink/contracts": "^1.3.0",
     "@coinbase/wallet-sdk": "^4.3.2",
     "@emotion/is-prop-valid": "^1.3.1",
     "@emotion/react": "^11.14.0",
