--- a/web3-contracts/package.json
+++ b/web3-contracts/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.15"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.3.0",
     "@initia/evm-precompiles": "^0.0.1",
     "@openzeppelin/contracts": "^5.3.0"
   },
