feat: Production-ready Vercel deployment configuration
- Add vercel.json with optimized configuration and security headers
- Create comprehensive deployment guide (DEPLOYMENT.md)
- Add production environment template (.env.production)
- Implement ErrorBoundary component for graceful error handling
- Update next.config.js with security headers and performance optimizations
- Add automated deployment script (deploy.sh) with build checks
- Enhance package.json with production scripts and dependencies
- Add robots.txt for SEO optimization
- Update .gitignore for production builds and deployment files
- Enable React strict mode and console removal for production builds

--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,28 @@ yarn-error.log*
 .env
 .env.development
 .env.test
-.env.production
+.env.production*
 
 # vercel
 .vercel
+.vercel.json
+
+# production builds
+/build
+/dist
+/out
+
+# logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+lerna-debug.log*
+
+# deployment
+deploy.zip
 
 # typescript
 *.tsbuildinfo
